@@ -119,6 +119,7 @@ struct _FmAppConfig
     int splitter_pos;
     gboolean media_in_new_tab;
     gboolean desktop_folder_new_win;
+    gboolean change_tab_on_drop;
 
     FmSidePaneMode side_pane_mode;
 
